--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -76,7 +76,7 @@
                                 <h3 class="fs-subtitle">Orléans Joue 2020</h3>
                                 <div class="row align-items-center text-left pt-4 pb-4 pl-2 pr-2">
                                     <fieldset disabled class="col-12 p-3 border">
-                                        <legend>Référents</legend>
+                                        <legend class="p-0">Référents</legend>
                                         <h4 class="pb-1">Ajouter un référent :</h4>
                                         <input type="text" name="fistName" placeholder="Prénom" />
                                         <input type="text" name="lastName" placeholder="Nom" />
@@ -96,17 +96,17 @@
                                                 <input type="checkbox" id="gardenParty" name="gardenParty" data-toggle="toggle" data-on="OUI" data-off="NON">
                                             </div>
                                         </div>
-                                        <div class="col-md-8 pt-4 pl-0">
-                                            <h4>Référents enregistrés</h4>
+                                        <div class="col-12 pt-4 pl-0">
+                                            <h4>Référents enregistrés :</h4>
                                             <ul>
                                                 <li>Patrick</li>
                                                 <li>Sophie</li>
                                             </ul>
                                         </div>
                                     </fieldset>
-                                    <fieldset class="border w-100 mt-4">
-                                       <legend class="pl-2">Bénévoles</legend>
-                                        <div class="volunteer col-md-8 pt-2">
+                                    <fieldset class="border w-100 mt-4 p-3">
+                                       <legend class="p-0">Bénévoles</legend>
+                                        <div class="volunteer col-12">
                                             <label for="volunteer">Besoin de bénévoles</label>
                                         </div>
                                         <div class="col-md-2">
@@ -149,7 +149,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="../JS/subscribeEditor.js"></script>
     <script src="../JS/main.js"></script>
-
 </body>
 
 </html>
