--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -39,7 +39,7 @@
                         </ul>
                         <!-- fieldsets -->
                         <form method="post" action="/inscription_editeur">
-                            <fieldset>
+                            <fieldset class="registrationState">
                                 <h2 class="fs-title">Informations générales</h2>
                                 <h3 class="fs-subtitle">Orléans Joue 2020</h3>
                                 <div class="row align-items-center text-left pt-3">
@@ -69,9 +69,7 @@
                                 <div class="text-left registration_cost">Prévisualisation du coût de l'inscription : 65 €</div>
                                 <input type="button" name="next" class="next action-button" value="Suivant" />
                             </fieldset>
-                        </form>
-                        <form method="post" action="/inscription_editeur">
-                            <fieldset>
+                            <fieldset class="registrationState">
                                 <h2 class="fs-title">Moyens Humains</h2>
                                 <h3 class="fs-subtitle">Orléans Joue 2020</h3>
                                 <div class="row align-items-center text-left pt-4 pb-4 pl-2 pr-2">
@@ -117,10 +115,7 @@
                                 <input type="button" name="previous" class="previous action-button-previous" value="Précédent" />
                                 <input type="button" name="next" class="next action-button" value="Suivant" />
                             </fieldset>
-                        </form>
-
-                        <form method="post" action="/inscription_editeur">
-                            <fieldset>
+                            <fieldset class="registrationState">
                                 <h2 class="fs-title">Informations complémentaires</h2>
                                 <h3 class="fs-subtitle">Orléans Joue 2020</h3>
                                 <div>
