--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -39,8 +39,8 @@
                             <li class="col-4"></li>
                         </ul>
                         <!-- fieldsets -->
-
-                        <form method="post" action="/subscribeEditor">
+                        <form method="post" action="/submitRegistration">
+                        	<input type="hidden" name="eventId" th:value="${event}">
                             <fieldset class="registrationState">
                                 <h2 class="fs-title">Informations générales</h2>
                                 <h3 class="fs-subtitle">Orléans Joue 2020</h3>
