--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -9,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Acme|Roboto&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <!--        <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/footer.css">
     <link rel="stylesheet" href="../CSS/navBar.css">
@@ -78,7 +79,7 @@
                                         <h4 class="pb-1">Ajouter un référent :</h4>
                                         <input type="text" name="fistName" placeholder="Prénom" />
                                         <input type="text" name="lastName" placeholder="Nom" />
-                                        <div class="row align-items-center text-left">
+                                        <div class="row align-items-center text-left pl-2">
                                             <div class="col-md-8">
                                                 <label for="accomadationNeed">Besoin d'un hébergement</label>
                                             </div>
@@ -86,7 +87,7 @@
                                                 <input type="checkbox" id="accomadationNeed" name="accomadationNeed" data-toggle="toggle" data-on="OUI" data-off="NON">
                                             </div>
                                         </div>
-                                        <div class="row align-items-center text-left">
+                                        <div class="row align-items-center text-left pl-2">
                                             <div class="col-md-8">
                                                 <label for="gardenParty">Participation à la garden party</label>
                                             </div>
@@ -103,13 +104,13 @@
                                         </div>
                                     </fieldset>
                                     <fieldset class="border w-100 mt-4 p-3">
-                                       <legend class="p-0">Bénévoles</legend>
-                                        <div class="volunteer col-12">
+                                        <legend class="p-0">Bénévoles</legend>
+                                        <div class="volunteer col-12 pl-2">
                                             <label for="volunteer">Besoin de bénévoles</label>
                                         </div>
                                         <div class="col-md-2">
                                             <input type="checkbox" id="volunteer" name="volunteersNeed" data-toggle="toggle" data-on="OUI" data-off="NON">
-                                        </div>                
+                                        </div>
                                     </fieldset>
                                 </div>
                                 <input type="button" name="previous" class="previous action-button-previous" value="Précédent" />
@@ -142,6 +143,7 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
+    <!--        <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>-->
     <script src="../JS/subscribeEditor.js"></script>
     <script src="../JS/main.js"></script>
 </body>
