--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -9,7 +9,6 @@
     <link href="https://fonts.googleapis.com/css?family=Acme&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Acme|Roboto&display=swap" rel="stylesheet">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!--        <link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">-->
     <link rel="stylesheet" href="../CSS/style.css">
     <link rel="stylesheet" href="../CSS/footer.css">
     <link rel="stylesheet" href="../CSS/navBar.css">
@@ -38,85 +37,88 @@
                             <li class="col-4"></li>
                             <li class="col-4"></li>
                         </ul>
-                        <!-- fieldsets -->
+                        <!-- form -->
                         <form method="post" action="/submitRegistration">
                         	<input type="hidden" name="eventId" th:value="${event}">
+							<!-- fieldset 1 -->
                             <fieldset class="registrationState">
                                 <h2 class="fs-title">Informations générales</h2>
                                 <h3 class="fs-subtitle">Orléans Joue 2020</h3>
-                                <div class="row align-items-center text-left pt-3">
-                                    <div class="col-sm-8">
-                                        <label for="tablesQuantity">Nombre de tables souhaitées</label>
+                                <fieldset class="border p-3 text-left">
+                                    <legend>Besoins matériel</legend>
+                                    <div class="row align-items-center">
+                                        <div class="col-sm-10">
+                                            <label for="tablesQuantity">Nombre de tables souhaitées :</label>
+                                        </div>
+                                        <div class="col-lg-1 p-lg-0 m-auto">
+                                            <input type="number" id="tablesQuantity" name="tablesQuantity" value="1" min="0" max="20">
+                                        </div>
                                     </div>
-                                    <div class="col-lg-2">
-                                        <input type="number" id="tablesQuantity" name="tablesQuantity" value="1" min="0" max="20">
+                                    <div class="row align-items-center">
+                                        <div class="col-sm-10">
+                                            <label for="electricalSupplyNeed">Besoin d'un raccord au réseau éléctrique :</label>
+                                        </div>
+                                        <div class="m-auto">
+                                            <label class="switch">
+                                                <input type="checkbox" id="electricalSupplyNeed" name="electricalSupplyNeed">
+                                                <span class="slider round"></span>
+                                            </label>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="row align-items-center text-left pt-4">
-                                    <div class="col-md-8">
-                                        <label for="electricalSupplyNeed">Besoin d'éléctricité</label>
+                                </fieldset>
+                                <fieldset class="border text-left mt-3 p-3">
+                                    <legend>Option vente</legend>
+                                    <div class="row align-items-cente">
+                                        <div class="col-sm-10">
+                                            <label for="send">Souhaitez-vous vendre des produits lors de l'évènement ?</label>
+                                        </div>
+                                        <div class="m-auto">
+                                            <label class="switch">
+                                                <input type="checkbox" id="send" name="saleOption">
+                                                <span class="slider round"></span>
+                                            </label>
+                                        </div>
                                     </div>
-                                    <div class="col-md-2">
-                                        <input type="checkbox" id="electricalSupplyNeed" name="electricalSupplyNeed" data-toggle="toggle" data-on="OUI" data-off="NON">
-                                    </div>
-                                </div>
-                                <div class="row align-items-center text-left pt-4 pb-4">
-                                    <div class="col-md-8">
-                                        <label for="send">Option vente sur le stand</label>
-                                    </div>
-                                    <div class="col-md-2">
-                                        <input type="checkbox" id="send" name="saleOption" data-toggle="toggle" data-on="OUI" data-off="NON">
-                                    </div>
-                                </div>
-                                <div class="text-left registration_cost">Prévisualisation du coût de l'inscription : 65 €</div>
+                                </fieldset>
+                                <div class="text-left registration_cost mt-3">Prévisualisation du coût de l'inscription : 65 €</div>
                                 <input type="button" name="next" class="next action-button" value="Suivant" />
                             </fieldset>
+                            <!-- fieldset 2 -->
                             <fieldset class="registrationState">
                                 <h2 class="fs-title">Moyens Humains</h2>
                                 <h3 class="fs-subtitle">Orléans Joue 2020</h3>
-                                <div class="row align-items-center text-left pt-4 pb-4 pl-2 pr-2">
-                                    <fieldset disabled class="col-12 p-3 border">
-                                        <legend class="p-0">Référents</legend>
-                                        <h4 class="pb-1">Ajouter un référent :</h4>
-                                        <input type="text" name="fistName" placeholder="Prénom" />
-                                        <input type="text" name="lastName" placeholder="Nom" />
-                                        <div class="row align-items-center text-left pl-2">
-                                            <div class="col-md-8">
-                                                <label for="accomadationNeed">Besoin d'un hébergement</label>
-                                            </div>
-                                            <div class="col-md-2">
-                                                <input type="checkbox" id="accomadationNeed" name="accomadationNeed" data-toggle="toggle" data-on="OUI" data-off="NON">
-                                            </div>
+                                <fieldset class="border p-3 text-left">
+                                    <legend>Représentants</legend>
+                                    <div class="row align-items-center">
+                                        <div class="col-sm-10">
+                                            <label for="agent">Des représentants de votre entreprise seront-ils présents ?</label>
                                         </div>
-                                        <div class="row align-items-center text-left pl-2">
-                                            <div class="col-md-8">
-                                                <label for="gardenParty">Participation à la garden party</label>
-                                            </div>
-                                            <div class="col-md-2">
-                                                <input type="checkbox" id="gardenParty" name="gardenParty" data-toggle="toggle" data-on="OUI" data-off="NON">
-                                            </div>
+                                        <div class="m-auto">
+                                            <label class="switch">
+                                                <input type="checkbox" id="agent" name="agentProvided">
+                                                <span class="slider round"></span>
+                                            </label>
                                         </div>
-                                        <div class="col-12 pt-4 pl-0">
-                                            <h4>Référents enregistrés :</h4>
-                                            <ul>
-                                                <li>Patrick</li>
-                                                <li>Sophie</li>
-                                            </ul>
+                                    </div>
+                                </fieldset>
+                                <fieldset class="border p-3 text-left mt-3">
+                                    <legend>Bénévoles</legend>
+                                    <div class="row align-items-center">
+                                        <div class="volunteer col-sm-10">
+                                            <label for="volunteer">Aurez-vous besoin de bénévoles ?</label>
                                         </div>
-                                    </fieldset>
-                                    <fieldset class="border w-100 mt-4 p-3">
-                                        <legend class="p-0">Bénévoles</legend>
-                                        <div class="volunteer col-12 pl-2">
-                                            <label for="volunteer">Besoin de bénévoles</label>
+                                        <div class="m-auto">
+                                            <label class="switch">
+                                                <input type="checkbox" id="volunteer" name="volunteersNeed">
+                                                <span class="slider round"></span>
+                                            </label>
                                         </div>
-                                        <div class="col-md-2">
-                                            <input type="checkbox" id="volunteer" name="volunteersNeed" data-toggle="toggle" data-on="OUI" data-off="NON">
-                                        </div>
-                                    </fieldset>
-                                </div>
+                                    </div>
+                                </fieldset>
                                 <input type="button" name="previous" class="previous action-button-previous" value="Précédent" />
                                 <input type="button" name="next" class="next action-button" value="Suivant" />
                             </fieldset>
+                            <!-- fieldset 3 -->
                             <fieldset class="registrationState">
                                 <h2 class="fs-title">Informations complémentaires</h2>
                                 <h3 class="fs-subtitle">Orléans Joue 2020</h3>
@@ -144,7 +146,6 @@
     <script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
-    <!--        <script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>-->
     <script src="../JS/subscribeEditor.js"></script>
     <script src="../JS/main.js"></script>
 </body>
