--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -21,7 +21,7 @@
 
     <main class="subscribeEditor">
         <!-- MultiStep Form -->
-        <div class="fluid-container">
+        <div class="fluid-container mainContainer">
             <h1 class="col-12">Formulaire d'inscription</h1>
             <div class="row">
                 <div class="col-12 ">
