--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -22,7 +22,9 @@
     <main class="subscribeEditor">
         <!-- MultiStep Form -->
         <div class="fluid-container mainContainer">
-            <h1 class="col-12">Formulaire d'inscription</h1>
+            <div class="row">
+            	<h1 class="col-11 offset-1">Formulaire d'inscription</h1>
+            </div>
             <div class="row">
                 <div class="col-12 ">
                     <div id="msform" class="msform">
