--- a/src/main/resources/static/CSS/subscribeEditor.css
+++ b/src/main/resources/static/CSS/subscribeEditor.css
@@ -197,6 +197,10 @@
     padding: 0;
 }
 
+.subscribeEditor h2 {
+    padding: 0 20px;
+}
+
 .subscribeEditor h4 {
     font-family: 'Roboto';
     font-size: 1.2em;
@@ -212,6 +216,7 @@
     font-style: italic;
     font-size: 0.9em;
 }
+
 .row{
 	width:100%;
 }
@@ -219,4 +224,11 @@
 .fluid-container{
 	width:100vw;
 	max-width:100%;
+}
+
+
+.quitIcon {
+    position:absolute;
+    top: 15px;
+    right: 15px;
 }
