--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -41,9 +41,16 @@
                         </ul>
                         <!-- form -->
                         <form method="post" action="/submitRegistration">
-                        	<input type="hidden" name="eventId" th:value="${event}">
-							<!-- fieldset 1 -->
+                            <input type="hidden" name="eventId" th:value="${event}">
+                            <!-- fieldset 1 -->
                             <fieldset class="registrationState">
+                                <div class="quitIcon">
+                                    <a href="#" title="Annuler l'inscripition à l'évènement">
+                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times-circle" class="svg-inline--fa fa-times-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                            <path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"></path>
+                                        </svg>
+                                    </a>
+                                </div>
                                 <h2 class="fs-title">Informations générales</h2>
                                 <h3 class="fs-subtitle">Orléans Joue 2020</h3>
                                 <fieldset class="border p-3 text-left">
@@ -87,6 +94,13 @@
                             </fieldset>
                             <!-- fieldset 2 -->
                             <fieldset class="registrationState">
+                                <div class="quitIcon">
+                                    <a href="#" title="Annuler l'inscripition à l'évènement">
+                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times-circle" class="svg-inline--fa fa-times-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                            <path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"></path>
+                                        </svg>
+                                    </a>
+                                </div>
                                 <h2 class="fs-title">Moyens Humains</h2>
                                 <h3 class="fs-subtitle">Orléans Joue 2020</h3>
                                 <fieldset class="border p-3 text-left">
@@ -122,6 +136,13 @@
                             </fieldset>
                             <!-- fieldset 3 -->
                             <fieldset class="registrationState">
+                                <div class="quitIcon">
+                                    <a href="#" title="Annuler l'inscripition à l'évènement">
+                                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="times-circle" class="svg-inline--fa fa-times-circle fa-w-16" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512">
+                                            <path d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"></path>
+                                        </svg>
+                                    </a>
+                                </div>
                                 <h2 class="fs-title">Informations complémentaires</h2>
                                 <h3 class="fs-subtitle">Orléans Joue 2020</h3>
                                 <div>
