--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -60,11 +60,11 @@
 			<div class="container containerTitleStyle">
 				<h2 class="col-12 title">Mes inscriptions:</h2>
 			</div>
-			<div class="container containerStyle">
+			<div th:each="events : ${subscribedEvents}"class="container containerStyle">
 				<div class="col-sm-12">  
 					<div class="card">
 						<div class="card-header">
-							<h2>Récapitulatif inscription evenement</h2>
+							<h2 th:text="|Récapitulatif inscription evenement : ${events.name}|"></h2>
 						</div>
 						<div class="card-body">
 							<h3 class="card-title">demande d'inscription effectuée le : </h3>
