add info inscription home exposant

--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -80,6 +80,7 @@ hr {
 }
 
 .btn {
+	margin-top: 1rem;
     background: var(--purple);
     border: none;
     margin-left: auto;
@@ -220,4 +221,11 @@ input:checked + .slider:before {
 
 .quitIcon svg:hover {
     fill:var(--danger);
+}
+
+.badge {
+	color: white;
+	font-size: 1rem;
+	font-weight: lighter;
+	margin-left: 1rem;
 }
