--- a/src/main/resources/static/CSS/subscribeEditor.css
+++ b/src/main/resources/static/CSS/subscribeEditor.css
@@ -9,6 +9,7 @@
     text-align: center;
     position: relative;
     margin-top: 30px;
+    width: 100%;
 }
 
 
@@ -189,7 +190,7 @@
 }
 
 .mainContainer {
-	height: 700px;
+    height: 700px;
 }
 
 .subscribeEditor h1 {
@@ -197,9 +198,7 @@
     padding: 0;
 }
 
-.subscribeEditor h2 {
-    padding: 0 20px;
-}
+
 
 .subscribeEditor h4 {
     font-family: 'Roboto';
@@ -217,18 +216,35 @@
     font-size: 0.9em;
 }
 
-.row{
-	width:100%;
-}
-
-.fluid-container{
-	width:100vw;
-	max-width:100%;
-}
-
-
 .quitIcon {
-    position:absolute;
+    position: absolute;
     top: 15px;
     right: 15px;
+}
+
+.fs-title br {
+	display: none;
+}
+
+@media screen and (max-width: 400px) {
+    .quitIcon {
+        top: 8px;
+        right: 8px;
+    }
+
+    .fs-title {
+        margin-top:20px;
+    }
+    
+    .fs-title br {
+    	display: initial;
+    }
+    
+    .registrationState {
+    	padding-left:8px;
+    	padding-right: 8px;
+    	width: 90%;
+    	margin: auto 5%;
+    }
+
 }
