ajout template modification inscription

--- a/src/main/resources/templates/homeEditor.html
+++ b/src/main/resources/templates/homeEditor.html
@@ -105,7 +105,7 @@
 										</div>
 									</div>  
 								</fieldset>
-								<a href="#" class="btn btn-primary">Modifier ma demande</a>
+								<a href="subscribeEditorModification" class="btn btn-primary">Modifier ma demande</a>
 							</div>
 						</div>
 					</div>
