ajout du squelette de la modale

--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -16,7 +16,12 @@
 	<body>
 	    <header th:replace="navBar.html :: top"></header>
 	    <main>	
-
+		    <div class="container">
+			  <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#form">
+			    See Modal with Form
+			  </button>  
+			</div>
+			<div th:replace="modaleModificationGame :: modale"></div>
 		</main>	
 		<footer th:replace="footer :: bottom"></footer>		
 		<script src="https://code.jquery.com/jquery-3.4.1.js" integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
