modification comportement hover mobile

--- a/src/main/resources/templates/subscribeEditorModification.html
+++ b/src/main/resources/templates/subscribeEditorModification.html
@@ -25,7 +25,7 @@
 						<div class="card col-4 col-lg-2 ml-2 mr-2 mb-3 card-custom" th:each="item : ${new int[18]}">
 							<div class="img-container">
 								<img class="card-img-top card-img-custom" src="https://picsum.photos/200/300" alt="Card image cap">
-								<div class="d-flex positionButton justify-content-around">
+								<div class="d-none d-lg-flex positionButton justify-content-around">
 									<a href="/deleteGame" type="button" class="messageDelete">
 										<p class="buttonP">Supprimer</p>
 									</a>
