fix bornes du calcul dynamique + fix subit du formaire avec entrée

--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -56,7 +56,7 @@
 	                                        <label for="tablesQuantity" th:text="|Nombre de tables souhaitées (${event.maxTablesPerEditor} max.) :|">Nombre de tables souhaitées :</label>
 	                                    </div>
 	                                    <div class="col-lg-1 p-lg-0 m-auto">
-	                                        <input type="number" id="tablesQuantity" name="tablesQuantity" value="0" min="0" max="20">
+	                                        <input type="number" id="tablesQuantity" name="tablesQuantity" value="0">
 	                                    </div>
 	                                </div>
 	                                <div class="row align-items-center">
