--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -67,6 +67,8 @@
 	                                        <label class="switch">
 	                                            <input type="checkbox" id="electricalSupplyNeed" name="electricalSupplyNeed">
 	                                            <span class="slider round"></span>
+	                                            <div class="switch_on">OUI</div>
+                                                <div class="switch_off">NON</div>
 	                                        </label>
 	                                    </div>
 	                                </div>
@@ -79,13 +81,15 @@
 	                                    </div>
 	                                    <div class="m-auto">
 	                                        <label class="switch">
-	                                            <input type="checkbox" id="saleOption" name="saleOption">
+	                                            <input type="checkbox" id="saleOption" class="saleOption" name="saleOption">
 	                                            <span class="slider round"></span>
+                                                <div class="switch_on">OUI</div>
+                                                <div class="switch_off">NON</div>
 	                                        </label>
 	                                    </div>
 	                                </div>
 	                            </fieldset>
-	                            <div id="costPreview" class="text-left registration_cost mt-3">Prévisualisation du coût de l'inscription : <span class="registrationCost">0</span> €</div>
+	                            <div id="costPreview" class="registration_cost text-center mt-4">Prévisualisation du coût de l'inscription : <span class="registrationCost">0</span> €</div>
 	                            <input type="button" name="next" class="next action-button" value="Suivant" />
 	                        </fieldset>
 	                        <fieldset class="registrationState">
@@ -108,6 +112,8 @@
 	                                        <label class="switch">
 	                                            <input type="checkbox" id="agent" name="agentProvided">
 	                                            <span class="slider round"></span>
+	                                            <div class="switch_on">OUI</div>
+                                                <div class="switch_off">NON</div>
 	                                        </label>
 	                                    </div>
 	                                </div>
@@ -122,6 +128,8 @@
 	                                        <label class="switch">
 	                                            <input type="checkbox" id="volunteer" name="volunteersNeed">
 	                                            <span class="slider round"></span>
+	                                            <div class="switch_on">OUI</div>
+                                                <div class="switch_off">NON</div>
 	                                        </label>
 	                                    </div>
 	                                </div>
@@ -144,7 +152,7 @@
 	                                <textarea id="comments" class="comments" name="comments"></textarea>
 	                            </div>
 	                            <div>
-	                                <label id="finalCost" for="cost" class="registration_cost w-100 text-left mt-4">Coût de l'inscription : 65 euros</label>
+	                                <label id="finalCost" for="cost" class="registration_cost w-100 text-center mt-4">Coût de l'inscription : 65 euros</label>
 	                                <input type="hidden" id="cost" name="registrationCost" value="65" />
 	                            </div>
 	                            <input type="button" name="previous" class="previous action-button-previous" value="Précédent" />
