--- a/src/main/resources/templates/subscribeEditor.html
+++ b/src/main/resources/templates/subscribeEditor.html
@@ -77,7 +77,7 @@
 	                                <legend>Option vente</legend>
 	                                <div class="row align-items-cente">
 	                                    <div class="col-sm-10">
-	                                        <label for="send">Souhaitez-vous vendre des produits lors de l'évènement ?</label>
+	                                        <label for="saleOption">Souhaitez-vous vendre des produits lors de l'évènement ?</label>
 	                                    </div>
 	                                    <div class="m-auto">
 	                                        <label class="switch">
